--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mongodb": "^2.2.16",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
-    "neo4j": "^2.0.0-RC2"
+    "neo4j-driver": "^1.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
