--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "csvtojson": "^1.1.9",
     "express": "^4.16.3",
     "express-busboy": "^6.0.1",
+    "json2csv": "^4.0.3",
     "mongodb": "^2.2.16",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
