--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "sudo mongod --dbpath /root/mongo & babel ./src --out-dir ./lib --save-dev babel-cli && babel-node --presets es2015 server.js",
+    "start": "mongod --dbpath /root/mongo & babel ./src --out-dir ./lib --save-dev babel-cli && babel-node --presets es2015 server.js",
     "build": "babel ./src --out-dir ./lib"
   },
   "author": "Amit Dayal & David Brock",
